--- a/config-builder/intended/configs/s1-ce02.cfg
+++ b/config-builder/intended/configs/s1-ce02.cfg
@@ -28,17 +28,12 @@ service routing protocols model multi-agent
 hostname s1-ce02
 dns domain atd.lab
 !
-vlan 1810
-   name S1-FW-XCO
+vlan 1013
+   name SVC01_C1_VLAN_SITE01_PE03
 !
-vlan 2001
-   name BKP-SITE01
+vrf instance ETHERNET_VPN
 !
-vrf instance BKP
-   description BACKUP VRF
-!
-vrf instance FW-HA
-   description FW-HA VRF
+vrf instance MGMT
 !
 management api http-commands
    protocol https
@@ -49,16 +44,10 @@ management api http-commands
 !
 aaa authorization exec default local
 !
-interface Port-Channel1
-   description to s1-pe01 - firewall test - vrrp
-   switchport trunk allowed vlan 1018,2001
-   switchport mode trunk
-!
 interface Ethernet1
-   channel-group 1 mode active
-!
-interface Ethernet2
-   channel-group 1 mode active
+   description to s1-pe02 ethernet4
+   switchport trunk allowed vlan 1-4094
+   switchport mode trunk
 !
 interface Management0
    description oob_management
@@ -66,13 +55,18 @@ interface Management0
    vrf MGMT
    ip address 192.168.2.212/24
 !
-ip routing
-ip routing vrf BKP
-ip routing vrf FW-HA
+interface Vlan1013
+   description SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN
+   no shutdown
+   vrf ETHERNET_VPN
+   ip address 10.1.3.12/24
 !
-ip route 0.0.0.0/0 192.168.2.1
-ip route vrf BKP 0.0.0.0/0 10.200.1.1
-ip route vrf FW-HA 0.0.0.0/0 10.18.10.1
+ip routing
+ip routing vrf ETHERNET_VPN
+ip routing vrf MGMT
+!
+ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.3.1
+ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 !
 ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
