--- a/config-builder/intended/configs/s1-pe02.cfg
+++ b/config-builder/intended/configs/s1-pe02.cfg
@@ -41,12 +41,7 @@ spanning-tree mode none
 !
 clock timezone Europe/Paris
 !
-vlan 1811
-   name SVC01_C1_VLAN_FIREWALL
-!
 vrf instance MGMT
-!
-vrf instance SVC01_VRF01
 !
 management api http-commands
    protocol https
@@ -90,7 +85,7 @@ interface Ethernet2
 interface Ethernet4
    description ROUTER_s1-ce02_eth1
    no shutdown
-   switchport trunk allowed vlan 1018
+   switchport trunk allowed vlan 1-4094
    switchport mode trunk
    switchport
 !
@@ -102,29 +97,16 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1810
-   description Test loopback
-   no shutdown
-   vrf SVC01_VRF01
-   ip address 10.18.0.2/32
-!
 interface Management0
    description OOB_MANAGEMENT
    no shutdown
    vrf MGMT
    ip address 192.168.2.12/24
 !
-interface Vlan1811
-   description SVC01_C1_VLAN_FIREWALL
-   no shutdown
-   vrf SVC01_VRF01
-   ip address virtual 10.18.11.1/24
-!
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
 no ip routing vrf MGMT
-ip routing vrf SVC01_VRF01
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
@@ -155,24 +137,12 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1811
-      rd 10.255.1.2:11811
-      route-target both 11811:11811
-      redistribute learned
-   !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
       no neighbor MPLS-OVERLAY-PEERS activate
-   !
-   vrf SVC01_VRF01
-      rd 10.255.1.2:10
-      route-target import evpn 10:10
-      route-target export evpn 10:10
-      router-id 10.255.1.2
-      redistribute connected
 !
 router isis CORE
    net 49.0001.0102.5500.1002.00
