--- a/config-builder/intended/configs/s2-pe01.cfg
+++ b/config-builder/intended/configs/s2-pe01.cfg
@@ -41,12 +41,12 @@ spanning-tree mode none
 !
 clock timezone Europe/Paris
 !
-vlan 1811
-   name SVC01_C1_VLAN_FIREWALL
+vlan 1015
+   name SVC01_C1_VLAN_SITE02_PE01
+!
+vrf instance ETHERNET_VPN
 !
 vrf instance MGMT
-!
-vrf instance SVC01_VRF01
 !
 management api http-commands
    protocol https
@@ -90,7 +90,7 @@ interface Ethernet2
 interface Ethernet3
    description ROUTER_s2-ce01_eth1
    no shutdown
-   switchport trunk allowed vlan 1018
+   switchport trunk allowed vlan 1-4094
    switchport mode trunk
    switchport
 !
@@ -102,11 +102,11 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1810
-   description Test loopback
+interface Loopback1001
+   description SVC_ETHERNET_LOOPBACK
    no shutdown
-   vrf SVC01_VRF01
-   ip address 10.18.0.5/32
+   vrf ETHERNET_VPN
+   ip address 10.1.255.5/32
 !
 interface Management0
    description OOB_MANAGEMENT
@@ -114,17 +114,17 @@ interface Management0
    vrf MGMT
    ip address 192.168.2.21/24
 !
-interface Vlan1811
-   description SVC01_C1_VLAN_FIREWALL
+interface Vlan1015
+   description SVC01_C1_VLAN_SITE02_PE01
    no shutdown
-   vrf SVC01_VRF01
-   ip address virtual 10.18.11.1/24
+   vrf ETHERNET_VPN
+   ip address virtual 10.1.5.1/24
 !
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
+ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
-ip routing vrf SVC01_VRF01
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
@@ -155,9 +155,9 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1811
-      rd 10.255.1.5:11811
-      route-target both 11811:11811
+   vlan 1015
+      rd 10.255.1.5:11015
+      route-target both 11015:11015
       redistribute learned
    !
    address-family evpn
@@ -167,10 +167,10 @@ router bgp 65000
    address-family ipv4
       no neighbor MPLS-OVERLAY-PEERS activate
    !
-   vrf SVC01_VRF01
-      rd 10.255.1.5:10
-      route-target import evpn 10:10
-      route-target export evpn 10:10
+   vrf ETHERNET_VPN
+      rd 10.255.1.5:11
+      route-target import evpn 11:11
+      route-target export evpn 11:11
       router-id 10.255.1.5
       redistribute connected
 !
