--- a/config-builder/inventory.yml
+++ b/config-builder/inventory.yml
@@ -7,12 +7,16 @@ all:
       hosts:
         s1-ce01:
           ansible_host: 192.168.2.211
+          device_id: 11
         s1-ce02:
           ansible_host: 192.168.2.212
-        s1-ce03:
-          ansible_host: 192.168.2.213
+          device_id: 12
+        # s1-ce03:
+        #   ansible_host: 192.168.2.213
+        #   device_id: 13
         s2-ce01:
           ansible_host: 192.168.2.221
+          device_id: 21
 
     backbone:
       children:
