--- a/config-builder/group_vars/network_services/downlinks.yml
+++ b/config-builder/group_vars/network_services/downlinks.yml
@@ -1,21 +1,13 @@
 ---
 # Definition of connected endpoints in the fabric.
 routers:
-  - name: s1-ce01
-    adapters:
-      - endpoint_ports: [ eth1 ]
-        switch_ports: [ Ethernet4 ]
-        switches: [ s1-pe01 ]
-        vlans: "1-4094"
-        mode: trunk
-
-  - name: s1-ce02
-    adapters:
-      - endpoint_ports: [ eth1 ]
-        switch_ports: [ Ethernet4 ]
-        switches: [ s1-pe02 ]
-        vlans: "1-4094"
-        mode: trunk
+  # - name: s1-ce01
+  #   adapters:
+  #     - endpoint_ports: [ eth1 ]
+  #       switch_ports: [ Ethernet4 ]
+  #       switches: [ s1-pe01 ]
+  #       vlans: "1-4094"
+  #       mode: trunk
 
   - name: s1-ce03
     adapters:
