--- a/config-builder/playbooks/config-management.yml
+++ b/config-builder/playbooks/config-management.yml
@@ -22,7 +22,16 @@
         name: arista.avd.eos_cli_config_gen
 
 - name: Generate Configs using AVD for clients/CPEs
-  hosts: all
+  hosts: backbone
+  gather_facts: false
+  tasks:
+    - name: Deploy device configuration
+      tags: ['never', 'deploy']
+      ansible.builtin.import_role:
+        name: arista.avd.eos_config_deploy_eapi
+
+- name: Generate Configs using AVD for clients/CPEs
+  hosts: cpe
   gather_facts: false
   tasks:
     - name: Deploy device configuration
