feat(evpn): Add L3VPN service (#5)
Add L3VPN lab:

- [x] AVD implementation
- [x] Anrta snapshot
- [x] documentation

Reviewed-on: https://git.as73.inetsix.net/labs/clab-eos-mpls-isis-sr/pulls/5
Co-authored-by: Thomas Grimonet <thomas.grimonet@gmail.com>
Co-committed-by: Thomas Grimonet <thomas.grimonet@gmail.com>

--- a/anta/snapshot-core.yml
+++ b/anta/snapshot-core.yml
@@ -11,3 +11,4 @@ text_format:
   - "show interfaces description"
   - "show platform tfa personality"
   - "show ip route vrf all"
+  - "show bgp evpn detail"
