--- a/backbone.clab.yml
+++ b/backbone.clab.yml
@@ -138,7 +138,9 @@ topology:
     - endpoints: ["s1-ce01:eth2", "s1-pe02:eth4"]
 
     - endpoints: ["s1-ce03:eth1", "s1-pe03:eth4"]
+    - endpoints: ["s1-ce03:eth2", "s1-pe03:eth5"]
     - endpoints: ["s1-ce04:eth1", "s1-pe04:eth4"]
+    - endpoints: ["s1-ce04:eth2", "s1-pe04:eth5"]
 
   # Site 2 PE
     - endpoints: ["s2-pe01:eth1", "s2-p01:eth1"]
