--- a/config-builder/config_backup/s2-p01_post_running-config.conf
+++ b/config-builder/config_backup/s2-p01_post_running-config.conf
@@ -2,6 +2,7 @@
 ! device: s2-p01 (cEOSLab, EOS-4.33.0F-39050855.4330F (engineering build))
 !
 no aaa root
+aaa authentication policy local allow-nopassword-remote-login
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 $6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/
