--- a/config-builder/intended/configs/s1-ce04.cfg
+++ b/config-builder/intended/configs/s1-ce04.cfg
@@ -28,8 +28,10 @@ service routing protocols model multi-agent
 hostname s1-ce04
 dns domain atd.lab
 !
-vlan 1014
+vlan 1114
    name SVC01_C1_VLAN_SITE01_PE04
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
@@ -42,6 +44,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
@@ -49,28 +52,63 @@ interface Ethernet1
    switchport trunk allowed vlan 1-4094
    switchport mode trunk
 !
+interface Ethernet2
+   no shutdown
+   no switchport
+!
+interface Ethernet2.101
+   description L3VPN Only USE CASE
+   no shutdown
+   encapsulation dot1q vlan 101
+   vrf ATM
+   ip address 10.2.0.3/31
+!
 interface Management0
    description oob_management
    no shutdown
    vrf MGMT
    ip address 192.168.2.213/24
 !
-interface Vlan1013
+interface Vlan1114
    description SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
    ip address 10.1.4.13/24
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf MGMT
 !
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
+!
+ip route vrf ATM 10.2.254.0/24 Null0
 ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.4.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 !
 ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
+!
+route-map RM-MARK-ATM-CE04 permit 10
+   description Mark FAKE route with community 65000:12014
+   set community 65000:10110 additive
+!
+router bgp 65101
+   neighbor MPLS-BACKBONE peer group
+   neighbor MPLS-BACKBONE remote-as 65000
+   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
+   neighbor MPLS-BACKBONE send-community
+   !
+   vrf ATM
+      neighbor 10.2.0.2 peer group MPLS-BACKBONE
+      neighbor 10.2.0.2 description MPLS CONNECTITVITY S1-PE03
+      neighbor 10.2.0.2 route-map RM-MARK-ATM-CE04 out
+      redistribute static
+      !
+      address-family ipv4
+         neighbor 10.2.0.2 activate
 !
 management ssh
    authentication empty-passwords permit
