--- a/config-builder/intended/configs/s1-p01.cfg
+++ b/config-builder/intended/configs/s1-p01.cfg
@@ -50,6 +50,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
@@ -188,7 +189,6 @@ router bfd
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.0.1
-   update wait-install
    no bgp default ipv4-unicast
    bgp cluster-id 10.255.0.1
    maximum-paths 4 ecmp 4
