--- a/config-builder/intended/configs/s2-ce01.cfg
+++ b/config-builder/intended/configs/s2-ce01.cfg
@@ -28,8 +28,13 @@ service routing protocols model multi-agent
 hostname s2-ce01
 dns domain atd.lab
 !
-vlan 1015
+vlan 1115
    name SVC01_C1_VLAN_SITE02_PE01
+!
+vlan 1205
+   name L3VPN_Only
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
@@ -42,6 +47,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
@@ -55,13 +61,20 @@ interface Management0
    vrf MGMT
    ip address 192.168.2.221/24
 !
-interface Vlan1015
+interface Vlan1115
    description SVC01_C1_VLAN_SITE02_PE01 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
    ip address 10.1.5.21/24
 !
+interface Vlan1205
+   description L3VPN_Only - VRF ATM
+   no shutdown
+   vrf ATM
+   ip address 10.2.1.21/24
+!
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf MGMT
 !
@@ -71,6 +84,19 @@ ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
+!
+router bgp 65102
+   neighbor MPLS-BACKBONE peer group
+   neighbor MPLS-BACKBONE remote-as 65000
+   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
+   !
+   vrf ATM
+      neighbor 10.2.1.1 peer group MPLS-BACKBONE
+      neighbor 10.2.1.1 description MPLS CONNECTITVITY S2-PE01
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.2.1.1 activate
 !
 management ssh
    authentication empty-passwords permit
