--- a/config-builder/intended/configs/s2-p02.cfg
+++ b/config-builder/intended/configs/s2-p02.cfg
@@ -50,6 +50,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
@@ -143,7 +144,6 @@ router bfd
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.0.4
-   update wait-install
    no bgp default ipv4-unicast
    bgp cluster-id 10.255.0.4
    maximum-paths 4 ecmp 4
