--- a/config-builder/intended/structured_configs/s2-p01.yml
+++ b/config-builder/intended/structured_configs/s2-p01.yml
@@ -168,7 +168,7 @@ ethernet_interfaces:
     ip: true
   description: P2P_s2-p02_Ethernet5
 metadata:
-  platform: cEOS-lab
+  platform: ceos
 router_bgp:
   as_notation: asdot
   address_family_evpn:
