--- a/config-builder/intended/structured_configs/s2-p02.yml
+++ b/config-builder/intended/structured_configs/s2-p02.yml
@@ -9,8 +9,6 @@ router_bgp:
   maximum_paths:
     paths: 4
     ecmp: 4
-  updates:
-    wait_install: true
   bgp_cluster_id: 10.255.0.4
   peer_groups:
   - name: MPLS-OVERLAY-PEERS
@@ -265,4 +263,4 @@ ethernet_interfaces:
     ip: true
   description: P2P_s1-p01_Ethernet7
 metadata:
-  platform: cEOS-lab
+  platform: ceos
