--- a/anta/inventory.yml
+++ b/anta/inventory.yml
@@ -31,11 +31,20 @@ anta_inventory:
     - name: s1-pe04
       host: 192.168.2.14
       tags: ['edge', 'core']
+    - name: s2-pe01
+      host: 192.168.2.21
+      tags: ['edge', 'core']
   # ------------------------------------- #
   #  Site 01 - CE routers
   # ------------------------------------- #
     - name: s1-ce01
       host: 192.168.2.211
+      tags: ['access']
+    - name: s1-ce03
+      host: 192.168.2.213
+      tags: ['access']
+    - name: s1-ce04
+      host: 192.168.2.214
       tags: ['access']
     - name: s1-ce02
       host: 192.168.2.212
