--- a/config-builder/config_backup/s1-pe03_post_running-config.conf
+++ b/config-builder/config_backup/s1-pe03_post_running-config.conf
@@ -2,6 +2,7 @@
 ! device: s1-pe03 (cEOSLab, EOS-4.33.0F-39050855.4330F (engineering build))
 !
 no aaa root
+aaa authentication policy local allow-nopassword-remote-login
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 $6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/
@@ -54,8 +55,10 @@ system l1
 !
 clock timezone Europe/Paris
 !
-vlan 1013
+vlan 1113
    name SVC01_C1_VLAN_SITE01_PE03
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
@@ -93,6 +96,15 @@ interface Ethernet4
    description ROUTER_s1-ce03_eth1
    switchport mode trunk
 !
+interface Ethernet5
+   no switchport
+!
+interface Ethernet5.101
+   description L3VPN Only USE CASE
+   encapsulation dot1q vlan 101
+   vrf ATM
+   ip address 10.2.0.0/31
+!
 interface Loopback0
    description ROUTER_ID
    ip address 10.255.1.3/32
@@ -100,17 +112,22 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1001
+interface Loopback1011
    description SVC_ETHERNET_LOOPBACK
    vrf ETHERNET_VPN
    ip address 10.1.255.3/32
+!
+interface Loopback1012
+   description SVC_ETHERNET_LOOPBACK
+   vrf ATM
+   ip address 10.2.255.3/32
 !
 interface Management0
    description OOB_MANAGEMENT
    vrf MGMT
    ip address 192.168.2.13/24
 !
-interface Vlan1013
+interface Vlan1113
    description SVC01_C1_VLAN_SITE01_PE03
    vrf ETHERNET_VPN
    ip address virtual 10.1.3.1/24
@@ -118,8 +135,15 @@ interface Vlan1013
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
+!
+ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
+ip community-list CL-INGRESS-ATM-LP-90 permit 65000:10090
+!
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
@@ -129,19 +153,31 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+route-map RM-MANAGE-WITH-COMMUNITIES permit 10
+   description Configure LP to 90 for ATM
+   match community CL-INGRESS-ATM-LP-90
+   set local-preference 90
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 20
+   description Configure LP to 110 for ATM
+   match community CL-INGRESS-ATM-LP-110
+   set local-preference 110
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.3
-   update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
+   neighbor ATM-BACKBONE peer group
+   neighbor ATM-BACKBONE description ATM CONNECTITVITY
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
@@ -149,9 +185,9 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1013
-      rd 10.255.1.3:11013
-      route-target both 11013:11013
+   vlan 1113
+      rd 10.255.1.3:11113
+      route-target both 11113:11113
       redistribute learned
    !
    address-family evpn
@@ -159,7 +195,21 @@ router bgp 65000
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
+      neighbor ATM-BACKBONE activate
       no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.3:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.3
+      neighbor 10.2.0.1 peer group ATM-BACKBONE
+      neighbor 10.2.0.1 remote-as 65101
+      neighbor 10.2.0.1 description ATM CONNECTITVITY S1-CE03
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.2.0.1 activate
    !
    vrf ETHERNET_VPN
       rd 10.255.1.3:11
