--- a/config-builder/config_backup/s2-pe01_pre_running-config.conf
+++ b/config-builder/config_backup/s2-pe01_pre_running-config.conf
@@ -2,6 +2,7 @@
 ! device: s2-pe01 (cEOSLab, EOS-4.33.0F-39050855.4330F (engineering build))
 !
 no aaa root
+aaa authentication policy local allow-nopassword-remote-login
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 $6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/
@@ -54,8 +55,13 @@ system l1
 !
 clock timezone Europe/Paris
 !
-vlan 1015
+vlan 1115
    name SVC01_C1_VLAN_SITE02_PE01
+!
+vlan 1205
+   name L3VPN-EXIT-POINT
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
@@ -100,26 +106,43 @@ interface Loopback0
    isis enable CORE
    isis passive
 !
-interface Loopback1001
+interface Loopback1011
    description SVC_ETHERNET_LOOPBACK
    vrf ETHERNET_VPN
    ip address 10.1.255.5/32
+!
+interface Loopback1012
+   description SVC_ETHERNET_LOOPBACK
+   vrf ATM
+   ip address 10.2.255.5/32
 !
 interface Management0
    description OOB_MANAGEMENT
    vrf MGMT
    ip address 192.168.2.21/24
 !
-interface Vlan1015
+interface Vlan1115
    description SVC01_C1_VLAN_SITE02_PE01
    vrf ETHERNET_VPN
    ip address virtual 10.1.5.1/24
 !
+interface Vlan1205
+   description L3VPN-EXIT-POINT
+   vrf ATM
+   ip address virtual 10.2.1.1/24
+!
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 no ip routing vrf MGMT
+!
+ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
+ip community-list CL-INGRESS-ATM-LP-90 permit 65000:10090
+!
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
@@ -129,19 +152,31 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+route-map RM-MANAGE-WITH-COMMUNITIES permit 10
+   description Configure LP to 90 for ATM
+   match community CL-INGRESS-ATM-LP-90
+   set local-preference 90
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 20
+   description Configure LP to 110 for ATM
+   match community CL-INGRESS-ATM-LP-110
+   set local-preference 110
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.5
-   update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
+   neighbor ATM-BACKBONE peer group
+   neighbor ATM-BACKBONE description ATM CONNECTITVITY
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
    neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
@@ -149,9 +184,14 @@ router bgp 65000
    neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
-   vlan 1015
-      rd 10.255.1.5:11015
-      route-target both 11015:11015
+   vlan 1115
+      rd 10.255.1.5:11115
+      route-target both 11115:11115
+      redistribute learned
+   !
+   vlan 1205
+      rd 10.255.1.5:13205
+      route-target both 13205:13205
       redistribute learned
    !
    address-family evpn
@@ -159,7 +199,21 @@ router bgp 65000
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
+      neighbor ATM-BACKBONE activate
       no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.5:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.5
+      neighbor 10.2.1.21 peer group ATM-BACKBONE
+      neighbor 10.2.1.21 remote-as 65102
+      neighbor 10.2.1.21 description ATM CONNECTITVITY S2-CE01
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.2.1.21 activate
    !
    vrf ETHERNET_VPN
       rd 10.255.1.5:11
