--- a/config-builder/group_vars/all/avd_settings.yml
+++ b/config-builder/group_vars/all/avd_settings.yml
@@ -1,2 +1,6 @@
 # Perform config backup before config replace
 eos_config_deploy_eapi_pre_running_config_backup: true
+
+custom_structured_configuration_prefix:
+  - custom_core_
+  - custom_atm_
