--- a/config-builder/intended/configs/s1-ce01.cfg
+++ b/config-builder/intended/configs/s1-ce01.cfg
@@ -28,6 +28,8 @@ service routing protocols model multi-agent
 hostname s1-ce01
 dns domain atd.lab
 !
+vrf instance ATM
+!
 vrf instance ETHERNET_VPN
 !
 vrf instance MGMT
@@ -39,6 +41,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
@@ -53,6 +56,7 @@ interface Management0
    ip address 192.168.2.211/24
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf MGMT
 !
