--- a/config-builder/intended/configs/s1-ce03.cfg
+++ b/config-builder/intended/configs/s1-ce03.cfg
@@ -28,8 +28,10 @@ service routing protocols model multi-agent
 hostname s1-ce03
 dns domain atd.lab
 !
-vlan 1013
+vlan 1113
    name SVC01_C1_VLAN_SITE01_PE03
+!
+vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
@@ -42,6 +44,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
@@ -49,28 +52,64 @@ interface Ethernet1
    switchport trunk allowed vlan 1-4094
    switchport mode trunk
 !
+interface Ethernet2
+   no shutdown
+   no switchport
+!
+interface Ethernet2.101
+   description L3VPN Only USE CASE
+   no shutdown
+   encapsulation dot1q vlan 101
+   vrf ATM
+   ip address 10.2.0.1/31
+!
 interface Management0
    description oob_management
    no shutdown
    vrf MGMT
    ip address 192.168.2.212/24
 !
-interface Vlan1013
+interface Vlan1113
    description SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
    ip address 10.1.3.12/24
 !
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf MGMT
 !
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
+!
+ip route vrf ATM 10.2.254.0/24 Null0
 ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.3.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 !
 ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
+!
+route-map RM-MARK-ATM-CE03 permit 10
+   description Mark FAKE route with community 65000:12013
+   set community 65000:10090 additive
+!
+router bgp 65101
+   neighbor MPLS-BACKBONE peer group
+   neighbor MPLS-BACKBONE remote-as 65000
+   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
+   neighbor MPLS-BACKBONE send-community
+   !
+   vrf ATM
+      neighbor 10.2.0.0 peer group MPLS-BACKBONE
+      neighbor 10.2.0.0 description MPLS CONNECTITVITY S1-PE03
+      neighbor 10.2.0.0 route-map RM-MARK-ATM-CE03 out
+      redistribute connected
+      redistribute static
+      !
+      address-family ipv4
+         neighbor 10.2.0.0 activate
 !
 management ssh
    authentication empty-passwords permit
