--- a/config-builder/intended/configs/s1-p02.cfg
+++ b/config-builder/intended/configs/s1-p02.cfg
@@ -50,6 +50,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
