--- a/config-builder/intended/configs/s1-pe01.cfg
+++ b/config-builder/intended/configs/s1-pe01.cfg
@@ -50,6 +50,7 @@ management api http-commands
    vrf MGMT
       no shutdown
 !
+aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
 interface Ethernet1
@@ -101,6 +102,12 @@ ip virtual-router mac-address 00:1c:73:00:dc:00
 ip routing
 no ip routing vrf MGMT
 !
+ip community-list CL-INGRESS-ATM-LP-90 permit 65000:10090
+ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
+!
+ip prefix-list PL-ATM-FAKE-PREFIX
+   seq 10 permit 10.2.254.0/24
+!
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
 mpls ip
@@ -109,19 +116,29 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+route-map RM-MANAGE-WITH-COMMUNITIES permit 10
+   description Configure LP to 90 for ATM
+   match community CL-INGRESS-ATM-LP-90
+   set local-preference 90
+!
+route-map RM-MANAGE-WITH-COMMUNITIES permit 20
+   description Configure LP to 110 for ATM
+   match community CL-INGRESS-ATM-LP-110
+   set local-preference 110
+!
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
 router bgp 65000
    bgp asn notation asdot
    router-id 10.255.1.1
-   update wait-install
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
    neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
    neighbor MPLS-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
    neighbor MPLS-OVERLAY-PEERS send-community
    neighbor MPLS-OVERLAY-PEERS maximum-routes 0
@@ -131,6 +148,7 @@ router bgp 65000
    neighbor 10.255.0.4 description s2-p02_Loopback0
    !
    address-family evpn
+      bgp additional-paths receive
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
    !
