--- a/config-builder/intended/structured_configs/s1-p02.yml
+++ b/config-builder/intended/structured_configs/s1-p02.yml
@@ -234,7 +234,7 @@ ethernet_interfaces:
     ip: true
   description: P2P_s1-p01_Ethernet5
 metadata:
-  platform: cEOS-lab
+  platform: ceos
 router_bgp:
   as_notation: asdot
   address_family_evpn:
