--- a/config-builder/intended/structured_configs/s1-pe02.yml
+++ b/config-builder/intended/structured_configs/s1-pe02.yml
@@ -9,8 +9,6 @@ router_bgp:
   maximum_paths:
     paths: 4
     ecmp: 4
-  updates:
-    wait_install: true
   peer_groups:
   - name: MPLS-OVERLAY-PEERS
     type: mpls
@@ -20,6 +18,7 @@ router_bgp:
     send_community: all
     maximum_routes: 0
     remote_as: '65000'
+    route_map_in: RM-MANAGE-WITH-COMMUNITIES
   address_family_evpn:
     neighbor_default:
       encapsulation: mpls
@@ -27,6 +26,8 @@ router_bgp:
     peer_groups:
     - name: MPLS-OVERLAY-PEERS
       activate: true
+    bgp_additional_paths:
+      receive: true
   address_family_ipv4:
     peer_groups:
     - name: MPLS-OVERLAY-PEERS
@@ -195,4 +196,37 @@ ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:1c:73:00:dc:00
 metadata:
-  platform: cEOS-lab
+  platform: ceos
+ip_community_lists:
+- name: CL-INGRESS-ATM-LP-90
+  entries:
+  - action: permit
+    communities:
+    - 65000:10090
+- name: CL-INGRESS-ATM-LP-110
+  entries:
+  - action: permit
+    communities:
+    - 65000:10110
+route_maps:
+- name: RM-MANAGE-WITH-COMMUNITIES
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    description: Configure LP to 90 for ATM
+    match:
+    - community CL-INGRESS-ATM-LP-90
+    set:
+    - local-preference 90
+  - sequence: 20
+    type: permit
+    description: Configure LP to 110 for ATM
+    match:
+    - community CL-INGRESS-ATM-LP-110
+    set:
+    - local-preference 110
+prefix_lists:
+- name: PL-ATM-FAKE-PREFIX
+  sequence_numbers:
+  - sequence: 10
+    action: permit 10.2.254.0/24
