--- a/config-builder/intended/structured_configs/s1-pe03.yml
+++ b/config-builder/intended/structured_configs/s1-pe03.yml
@@ -9,8 +9,6 @@ router_bgp:
   maximum_paths:
     paths: 4
     ecmp: 4
-  updates:
-    wait_install: true
   peer_groups:
   - name: MPLS-OVERLAY-PEERS
     type: mpls
@@ -20,6 +18,11 @@ router_bgp:
     send_community: all
     maximum_routes: 0
     remote_as: '65000'
+    route_map_in: RM-MANAGE-WITH-COMMUNITIES
+  - name: ATM-BACKBONE
+    description: ATM CONNECTITVITY
+    shutdown: false
+    bfd: false
   address_family_evpn:
     neighbor_default:
       encapsulation: mpls
@@ -27,10 +30,14 @@ router_bgp:
     peer_groups:
     - name: MPLS-OVERLAY-PEERS
       activate: true
+    bgp_additional_paths:
+      receive: true
   address_family_ipv4:
     peer_groups:
     - name: MPLS-OVERLAY-PEERS
       activate: false
+    - name: ATM-BACKBONE
+      activate: true
   neighbors:
   - ip_address: 10.255.0.1
     peer_group: MPLS-OVERLAY-PEERS
@@ -41,6 +48,30 @@ router_bgp:
     peer: s2-p02
     description: s2-p02_Loopback0
   vrfs:
+  - name: ATM
+    rd: 10.255.1.3:12
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - '12:12'
+      export:
+      - address_family: evpn
+        route_targets:
+        - '12:12'
+    router_id: 10.255.1.3
+    redistribute:
+      connected:
+        enabled: true
+    address_family_ipv4:
+      neighbors:
+      - ip_address: 10.2.0.1
+        activate: true
+    neighbors:
+    - ip_address: 10.2.0.1
+      peer_group: ATM-BACKBONE
+      description: ATM CONNECTITVITY S1-CE03
+      remote_as: '65101'
   - name: ETHERNET_VPN
     rd: 10.255.1.3:11
     route_targets:
@@ -57,12 +88,12 @@ router_bgp:
       connected:
         enabled: true
   vlans:
-  - id: 1013
+  - id: 1113
     tenant: SVC_ETHERNET
-    rd: 10.255.1.3:11013
+    rd: 10.255.1.3:11113
     route_targets:
       both:
-      - 11013:11013
+      - 11113:11113
     redistribute_routes:
     - learned
   as_notation: asdot
@@ -112,6 +143,9 @@ clock:
 vrfs:
 - name: MGMT
   ip_routing: false
+- name: ATM
+  tenant: L3VPN_Only
+  ip_routing: true
 - name: ETHERNET_VPN
   tenant: SVC_ETHERNET
   ip_routing: true
@@ -136,7 +170,12 @@ loopback_interfaces:
   isis_passive: true
   node_segment:
     ipv4_index: 3
-- name: Loopback1001
+- name: Loopback1012
+  description: SVC_ETHERNET_LOOPBACK
+  shutdown: false
+  vrf: ATM
+  ip_address: 10.2.255.3/32
+- name: Loopback1011
   description: SVC_ETHERNET_LOOPBACK
   shutdown: false
   vrf: ETHERNET_VPN
@@ -224,6 +263,19 @@ ethernet_interfaces:
   mpls:
     ip: true
   description: P2P_s1-p02_Ethernet3
+- name: Ethernet5.101
+  peer_type: l3_interface
+  ip_address: 10.2.0.0/31
+  shutdown: false
+  description: L3VPN Only USE CASE
+  encapsulation_dot1q:
+    vlan: 101
+  vrf: ATM
+- name: Ethernet5
+  switchport:
+    enabled: false
+  peer_type: l3_interface
+  shutdown: false
 - name: Ethernet4
   peer: s1-ce03
   peer_interface: eth1
@@ -236,14 +288,14 @@ ethernet_interfaces:
     trunk:
       allowed_vlan: 1-4094
 vlans:
-- id: 1013
+- id: 1113
   name: SVC01_C1_VLAN_SITE01_PE03
   tenant: SVC_ETHERNET
 ip_igmp_snooping:
   globally_enabled: true
 ip_virtual_router_mac_address: 00:1c:73:00:dc:00
 vlan_interfaces:
-- name: Vlan1013
+- name: Vlan1113
   tenant: SVC_ETHERNET
   tags:
   - node03
@@ -252,4 +304,37 @@ vlan_interfaces:
   ip_address_virtual: 10.1.3.1/24
   vrf: ETHERNET_VPN
 metadata:
-  platform: cEOS-lab
+  platform: ceos
+ip_community_lists:
+- name: CL-INGRESS-ATM-LP-90
+  entries:
+  - action: permit
+    communities:
+    - 65000:10090
+- name: CL-INGRESS-ATM-LP-110
+  entries:
+  - action: permit
+    communities:
+    - 65000:10110
+route_maps:
+- name: RM-MANAGE-WITH-COMMUNITIES
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    description: Configure LP to 90 for ATM
+    match:
+    - community CL-INGRESS-ATM-LP-90
+    set:
+    - local-preference 90
+  - sequence: 20
+    type: permit
+    description: Configure LP to 110 for ATM
+    match:
+    - community CL-INGRESS-ATM-LP-110
+    set:
+    - local-preference 110
+prefix_lists:
+- name: PL-ATM-FAKE-PREFIX
+  sequence_numbers:
+  - sequence: 10
+    action: permit 10.2.254.0/24
