--- a/config-builder/inventory.yml
+++ b/config-builder/inventory.yml
@@ -53,3 +53,16 @@ all:
         # network_services:
         #   children:
         #     backbone_pe_routers:
+
+    labs:
+      children:
+        l3vpn:
+          hosts:
+            s1-pe03:
+            s1-pe04:
+            s1-p01:
+            s2-p01:
+            s2-pe01:
+            s1-ce03:
+            s1-ce04:
+            s2-ce01:
